<resources>
    <string name="app_name">Todo App</string>
    <string name="edit_title">Enter Title Name</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Choose Your Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_cancel">Do you want to return to main screen?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome to Todo App</string>
    <string name="login_title">Enter your Credential</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>

    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="priority">Choose Your Priority</string>

</resources>